# AziroAssignment-Connector-

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
include/: file_details.h
include/config/: connector_config.h
include/destination/: azure_blob_dt.h  destination_adapter.h  destination_type.h  file_system_dt.h
include/engine/: connector_engine.h
include/metadata/: file_metadata.h  file_metadata_utils.h  json_handler.h
include/source/: file_system_st.h  one_drive_st.h  share_point_st.h  source_adapter.h  source_type.h
include/utils/: utils.h  utils_impl.h
src/destination/: azure_blob_dt.cpp  destination_adapter.cpp  file_system_dt.cpp
src/engine/: connector_engine.cpp
src/metadata/: file_metadata_utils.cpp  json_handler.cpp
src/source/: file_system_st.cpp  one_drive_st.cpp  share_point_st.cpp  source_adapter.cpp
src/utils/: utils.cpp
tests/: test_file_metadata_utils.cpp
